--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@vitejs/plugin-react": "^5.1.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "wouter": "^3.9.0"
   },
   "devDependencies": {
     "@types/node": "^25.0.9",
