--- a/client/ts.config.json
+++ b/client/ts.config.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@assets/*": ["../attached_assets/*"]
     }
   }
 }
