--- a/client/ts.config.json
+++ b/client/ts.config.json
@@ -3,7 +3,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "@assets/*": ["../attached_assets/*"]
+      "@assets/*": ["./attached_assets/*"]
     }
   }
 }
