--- a/client/ts.config.json
+++ b/client/ts.config.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "/",
     "paths": {
       "@/*": ["./src/*"],
       "@assets/*": ["./attached_assets/*"]
